k8s/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brewery-ingress
  namespace: brewery
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - brewery.bigiron.dev
      secretName: brewery-bigiron-dev-tls
  rules:
    - host: brewery.bigiron.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brewery-orchestrator
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - demo.bigiron.dev
      secretName: demo-bigiron-dev-tls
  rules:
    - host: demo.bigiron.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app
                port:
                  number: 80
